--- a/contact-otp/src/app/component/header/header.component.html
+++ b/contact-otp/src/app/component/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Kisan Network</a>
+    <a class="navbar-brand" href="#">Contact App</a>
   </div>
 </nav>
