--- a/contact-otp/src/app/component/messages/messages.component.html
+++ b/contact-otp/src/app/component/messages/messages.component.html
@@ -1,24 +1,14 @@
-<p>messages works!</p>
-
-<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-    </ng-container>
-
-    <!-- Message Column -->
-    <ng-container matColumnDef="message">
-        <th mat-header-cell *matHeaderCellDef>Message</th>
-        <td mat-cell *matCellDef="let element">{{ element.message }}</td>
-    </ng-container>
-
-    <!-- Time Column with sorting header -->
-    <ng-container matColumnDef="time">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Time</th>
-        <td mat-cell *matCellDef="let element">{{ element.time }}</td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+<table class="table table-bordered table-sm">
+    <thead>
+        <tr>
+            <th *ngFor="let head of displayedColumns" scope="col">{{head}}</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr scope="row" *ngFor="let element of dataSource">
+            <td>{{element.name}}</td>
+            <td>{{element.message}}</td>
+            <td>{{element.time}}</td>
+        </tr>
+    </tbody>
 </table>
